--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <header role="banner">
             <h1>Binding of Isaac Clone (Placeholder title)</h1>
         </header>
-
+	
+	<h3>Group 6</h3>
         <p>Group Members</p>
       
         <nav>
