--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
         <header role="banner">
-            <h1>Binding of Isaac Clone (Placeholder title)</h1>
+            <h1>JCrawl</h1>
         </header>
 	
 		<h3>Group 6</h3>
